Added a hero to the topbar and did some styling

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,6 +3,15 @@
 @theme{
     --color-background-dark: #070113;
     --color-background: #fefefe;
+    --color-accent: #6CB0BA;
+}
+
+body {
+    background-color: var(--color-background-dark);
+}
+
+* {
+    box-sizing: border-box;
 }
 
 
